# mozsearch

./: .envrc  .eslintrc.js  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  .travis.yml  CONTRIBUTING.md  Makefile  README.md  TODO  Vagrantfile  build-docker.sh  cmd-lines  crossref-template.html  crossref.js  file-template.html  find-js.py  find-repo-files.py  findall.py  flake.nix  help.html  highlight.pack.js  idl-analyze.py  js-analyze.js  js-files  js-output.js  lib.js  livegrep-index.json  mkindex  output-dir.js  output-file.js  output-help.js  output-template.js  output.js  run-docker.sh  searchresults-template.html  setversion.js  trigram-index.js  update-repos  (+1 more)
aws/: attach-index-volume.py  awslib.py  clone-repo-volume.py  detach-index-volume.py  indexer-startup.sh  provision-indexer.py  provision-indexer.sh  provision-web-server.sh  provision_indexer.py  swap-web-server.py  terminate-indexer.py  web-server-startup.sh
blame/: index-file.py  output.py  output2.py  show-diff.py  test.py  transform-repo.py  transform-repo.sh
clang-plugin/: BindingOperations.cpp  BindingOperations.h  FileOperations.cpp  FileOperations.h  Indexer.cpp  IndexerOld.cpp  Makefile  MozsearchAction.h  MozsearchIndexer.cpp  Registration.cpp  StringOperations.cpp  StringOperations.h  cpp-index.cpp  test.cpp
config_defaults/: ontology-mapping.toml  per-file-info.toml  source_file_info_boxes.liquid  source_file_other_tools_panels.liquid
crossref/: Cargo.toml
docs/: a11y.md  addons.txt  analysis.md  aws.md  bash-scripting-cheatsheet.md  blame-design.txt  blame.md  crossref.md  gc-annotation.md  index-directory-contents.md  install.md  liquid-templating-cheatsheet.md  mach-design.txt  manual-indexing.md  newrepo.md  nss-stuff.txt  old-vagrant-setup.md  output.md  platform-notes.txt  searchfox-tool-cookbook.md  testing-checks.md  vm-docker.md  web-server.md  webtest.md
extension/: background.js  manifest.json
fastcgi/examples/: Makefile.am  Makefile.in  authorizer.c  echo-cpp.cpp  echo-x.c  echo.c  log-dump.c  size.c  threaded.c
infrastructure/: Dockerfile  common-provision-post.sh  common-provision-pre.sh  docker-provision-post.sh  docker-provision-pre.sh  docker-provision.sh  indexer-provision.sh  indexer-run.sh  indexer-setup.sh  indexer-update.sh  indexer-upload.sh  reblame-run.sh  web-provision.sh  web-server-check.sh  web-server-provision.sh  web-server-run.sh  web-server-setup.sh  web-server-update.sh  with-auto-restart.sh
java/: BUILD  README.md  WORKSPACE
load-test/: load.py
resources/: results-template.html  results.js
revs/: dev  release
router/: blame.py  build.sh  codesearch.py  crossrefs.py  identifiers.py  logger.py  nsresults.py  raw_search.py  router.c  router.py
sax/: README  sax.js  sax.patch
scripts/: annotate-gc.py  annotate-gc.sh  build-codesearch.py  build-codesearch.sh  build.sh  check-helper.sh  check-index.sh  composite-config.py  compress-outputs.sh  copy-objdir-files.py  cpp-configure.sh  crossref.sh  css-analyze.sh  html-analyze.sh  (+57 more)
scripts/web-analyze/wasm-css-analyzer/: Cargo.toml  build.sh
scripts/web-analyze/wasm-css-analyzer/src/: lib.rs
tools/: Cargo.toml  build.rs
tools/.cargo/: config.toml
tools/languages/tokenizer_queries/: cpp.scm  python.scm  rust.scm  typescript.scm
tools/malloc_size_of/: Cargo.toml  lib.rs
tools/src/: analysis.rs  blame.rs  config.rs  css_analyzer.rs  describe.rs  diagnostics.rs  doc_trees_handler.rs  file_utils.rs  format.rs  git_ops.rs  glob_helper.rs  languages.rs  lib.rs  links.rs  logging.rs  output.rs  symbol_graph_edge_kind.rs  tokenize.rs  url_encode_path.rs  url_map_handler.rs
tools/src/abstract_server/: lazy_crossref.rs  local_index.rs  mod.rs  remote_server.rs  server_interface.rs
tools/src/cmd_pipeline/: builder.rs  cmd_augment_results.rs  cmd_batch_render.rs  cmd_cat_html.rs  cmd_compile_results.rs  cmd_crossref_expand.rs  cmd_crossref_lookup.rs  cmd_filter_analysis.rs  cmd_format_symbols.rs  cmd_fuse_crossrefs.rs  cmd_graph.rs  cmd_jq.rs  cmd_jumpref_lookup.rs  cmd_merge_analyses.rs  cmd_normalize_unstable_data.rs  cmd_prod_filter.rs  cmd_query.rs  cmd_render.rs  cmd_search.rs  cmd_search_files.rs  cmd_search_identifiers.rs  cmd_search_text.rs  cmd_show_html.rs  cmd_tokenize_source.rs  cmd_traverse.rs  cmd_webtest.rs  hier_graph.rs  interface.rs  mod.rs  parser.rs  symbol_graph.rs  transforms.rs
tools/src/file_format/: analysis.rs  analysis_manglings.rs  bisectable_mmap.rs  code_coverage_report.rs  config.rs  coverage.rs  crossref.rs  crossref_converter.rs  crossref_lookup.rs  doc_trees.rs  globbing_file_list.rs  identifiers.rs  jumpref.rs  merger.rs  mod.rs  ontology_mapping.rs  ontology_pointer_kind.rs  per_file_info.rs  repo_data_ingestion.rs  url_map.rs
tools/src/file_format/history/: io_helpers.rs  mod.rs  rev_summaries.rs  syntax_files_struct.rs  syntax_symdex.rs  timeline_common.rs  timeline_files_delta.rs  timeline_tokens.rs
tools/src/query/: chew_query.rs  mod.rs  query_core.toml
tools/src/templating/: builder.rs  liquid_exts.rs  mod.rs
tools/src/tree_sitter_support/: cst_tokenizer.rs  mod.rs
tools/src/utils/: mod.rs  owned_or_borrowed.rs  temp_dir.rs
tools/templates/: breadcrumbs.liquid  coverage_graph_toggle.liquid  coverage_history.liquid  dir_listing.liquid  footer.liquid  header_query.liquid  header_search.liquid  help_index.liquid  navigation_panel.liquid  panel.liquid  path.liquid  pipeline_explainer.liquid  query_results.liquid  scroll_footer.liquid  search_template.liquid  settings.liquid
tools/templates/query_results/: basic_markup_array.liquid  facet_group.liquid  facet_root.liquid  file_results.liquid  file_table.liquid  graph_collection_root.liquid  graph_input.liquid  graph_panel.liquid  graph_root.liquid  kind_group.liquid  line_span.liquid  pathkind_group.liquid  rb_root.liquid  symbol_crossref_info_list_root.liquid  symbol_tree_table.liquid  symbol_tree_table_list_root.liquid  symbol_tree_table_node.liquid  table_header_cell.liquid  text_file_root.liquid
tools/templates/svg_icons/: copy_icons.liquid
tools/tests/: test_check_insta.rs
(+1473 files in other folders)
