[package]
name = "tools"
version = "0.1.0"
authors = ["Bill McCloskey <billm@mozilla.com>"]
edition = "2018"

[dependencies]
async-stream = "0.3.2"
async-trait = "0.1.50"
chrono = "0.2"
clap = "2"
env_logger = "0.7.1"
flate2 = { version = "1", features = ["tokio"] }
futures-core = "0.3.17"
getopts = "0.2.19"
git2 = "0.13.20"
hyper = "0.10"
insta = { version = "1.7.1", features = ["glob"] }
ipdl_parser = { path = "./ipdl_parser" }
# asuth picked this version because our Cargo.lock already had 0.7.11 for our
# rls-analysis dep.
itertools = "0.7.11"
jemalloc-sys = "0.3.2"
jemallocator = "0.3.2"
lazy_static = "1.1"
linkify = "0.2.0"
log = "0.4.0"
lol_html = { git = "https://github.com/cloudflare/lol-html", rev = "8860fa455db627a5c227d014e1cecbe1832eb0ed" }
malloc_size_of = { path = "./malloc_size_of" }
malloc_size_of_derive = "0.1"
memmap = "0.5.0"
num_cpus = "1"
regex = "1"
reqwest = "0.11.3"
rls-analysis = "0.18.1"
rls-data = "0.19.1"
rustc-serialize = "0.3.18"
shell-words = "1.0.0"
# Note that the "rc" feature as documented at https://serde.rs/feature-flags.html
# does not make any effort to do interning
serde = { version = "1.0.130", features = ["derive", "rc", "std"] }
serde_json = { version = "1.0.67", features = ["preserve_order"] }
serde_repr = "0.1"
structopt = "0.3"
tokio = { version = "1.6.0", features = ["rt-multi-thread", "net", "macros", "fs", "io-util"] }
tokio-stream = "0.1.8"
url = "2.2.2"
# We need https://github.com/anderslanglands/ustr/pull/21
# which is the fix for https://github.com/anderslanglands/ustr/issues/20
# in order for our BTreeMap orderings in crossref.rs to be right.
# I'm using my branch with fixed tests for the repo/revision since I won't
# delete the repo.  And once the crate is updated, we can switch back to
# a variant of:
# ustr = { version = "0.8.1", features = ["serialization"] }
ustr = { git = "https://github.com/asutherland/ustr", rev = "e87cb1584a1142486514d323bc7c18406cfe4806", features = ["serialization"] }

# Build release mode with line number info for easier debugging when
# we hit panics in production
[profile.release]
debug = 1
