[package]
name = "tools"
version = "0.1.0"
authors = ["Bill McCloskey <billm@mozilla.com>"]
edition = "2018"

[build-dependencies]
tonic-build = "0.7.1"

[dependencies]
async-stream = "0.3.2"
async-trait = "0.1.50"
axum = "0.5.3"
chrono = "0.2"
clap = { version = "3.0", features = ["cargo", "derive", "env"] }
cssparser = "0.29"
dot-generator = "0.2.0"
dot-structures = "0.1.0"
env_logger = "0.7.1"
flate2 = { version = "1", features = ["tokio"] }
futures-core = "0.3.17"
getopts = "0.2.19"
graphviz-rust = "0.2.0"
git2 = "0.13.20"
globset = "0.4.8"
hyper = "0.10"
include_dir = "0.7.2"
insta = { version = "1.14.0" }
ipdl_parser = { path = "./ipdl_parser" }
# asuth picked this version because our Cargo.lock already had 0.7.11 for our
# rls-analysis dep.
itertools = "0.7.11"
jemalloc-sys = "0.3.2"
jemallocator = "0.3.2"
json-structural-diff = "0.1.0"
lazy_static = "1.1"
linkify = "0.2.0"
liquid = "0.26.0"
liquid-core = "0.26.0"
log = "0.4.0"
lol_html = "0.3.1"
malloc_size_of = { path = "./malloc_size_of" }
malloc_size_of_derive = "0.1"
memmap = { package = "memmap2", version = "0.5.3" }
num_cpus = "1"
petgraph = "0.6.0"
prost = "0.10.1"
query-parser = "0.2.0"
regex = "1"
reqwest = "0.11.3"
rls-analysis = "0.18.1"
rls-data = "0.19.1"
shell-words = "1.0.0"
# Note that the "rc" feature as documented at https://serde.rs/feature-flags.html
# does not make any effort to do interning
serde = { version = "1.0.130", features = ["derive", "rc", "std"] }
serde_json = { version = "1.0.67", features = ["preserve_order"] }
serde_repr = "0.1"
tokio = { version = "1.6.0", features = ["rt-multi-thread", "net", "macros", "fs", "io-util"] }
tokio-stream = "0.1.8"
toml = "0.5.9"
tonic = "0.7.1"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", features = ["std", "env-filter", "fmt", "local-time", "registry", "json"] }
url = "2.2.2"
# We need https://github.com/anderslanglands/ustr/pull/21
# which is the fix for https://github.com/anderslanglands/ustr/issues/20
# in order for our BTreeMap orderings in crossref.rs to be right.
# I'm using my branch with fixed tests for the repo/revision since I won't
# delete the repo.  And once the crate is updated, we can switch back to
# a variant of:
# ustr = { version = "0.8.1", features = ["serialization"] }
ustr = { git = "https://github.com/asutherland/ustr", rev = "e87cb1584a1142486514d323bc7c18406cfe4806", features = ["serialization"] }
walkdir = "2.3.2"

# Build release mode with line number info for easier debugging when
# we hit panics in production
[profile.release]
debug = 1
incremental = true
