[package]
name = "malloc_size_of"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MIT/Apache-2.0"
publish = false

[lib]
path = "lib.rs"

[features]
servo = [
    "hyper",
    "hyper_serde",
    "serde",
    "serde_bytes",
    "string_cache",
    "time",
    "url",
    "uuid",
]

[dependencies]
app_units = "0.7"
crossbeam-channel = { version = "0.3", optional = true }
euclid = "0.20"
hyper = { version = "0.12", optional = true }
hyper_serde = { version = "0.11", optional = true }
keyboard-types = {version = "0.4.3", optional = true}
serde = { version = "1.0.27", optional = true }
serde_bytes = { version = "0.11", optional = true }
smallbitvec = "2.3.0"
smallvec = "1.0"
string_cache = { version = "0.8", optional = true }
thin-slice = "0.1.0"
time = { version = "0.1.17", optional = true }
url = { version = "2.0", optional = true }
void = "1.0.2"
uuid = {version = "0.8", features = ["v4"], optional = true}
