[package]
name = "wasm-css-analyzer"
version = "1.0.0"
authors = ["arai <arai_a@mac.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
tools = { path = "../../../tools" }
js-sys = "0.3.69"
wasm-bindgen = "0.2.78"
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
